[main-private] code inspection